# MessageFlight

./: .gitignore  LICENSE  MessageFlight.spec  README.en.md  README.id.md  README.ja.md  README.ko.md  README.md  README.ms.md  README.th.md  README.vi.md  README.zh.md  message_flight.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/plan/: 2026-06-10-codebase-fixes.md  2026-06-10-performance-optimization.md
docs/review/: 2026-06-10-full-codebase-review.md
docs/superpowers/plans/: 2026-06-09-ci.md  2026-06-09-readme-bilingual.md
docs/superpowers/specs/: 2026-06-09-ci-design.md  2026-06-09-readme-bilingual-design.md  2026-06-09-task-04-tts-design.md  2026-06-09-task-05-gui-settings-design.md  2026-06-09-task-06-flight-modes-design.md  2026-06-09-task-07-vertical-pong-decouple-design.md  2026-06-12-gamification-design.md  2026-06-12-voice-input-design.md
message_flight/: __main__.py  achievement_engine.py  achievements.py  agent.py  agent_chat_window.py  autostart.py  cli.py  collection_tab.py  config.py  demo_notifications.py  flight_widget.py  i18n.py  mcp_client.py  notification_queue.py  notification_worker.py  persona_rewriter.py  plane_banner.py  preset_editor.py  settings_dialog.py  stt.py  stt_manager.py  toast.py  tray_app.py  tts.py  tts_manager.py  voice_commands.py  wake_word.py
message_flight/plane_presets/: __init__.py  airplane.py  base.py  bird.py  duck.py  gold_ufo.py  pixel_bird.py  rainbow_rocket.py  rocket.py  sleigh.py  ufo.py
scripts/: test_wake_word.py
tests/: test_achievement_engine.py  test_achievements.py  test_agent.py  test_agent_chat_window.py  test_autostart.py  test_cli.py  test_collection_tab.py  test_config.py  test_demo_notifications.py  test_flight_widget.py  test_gamification_smoke.py  test_i18n.py  test_mcp_client.py  test_notification_queue.py  test_notification_worker.py  test_performance.py  test_persona_rewriter.py  test_plane_banner.py  test_preset_editor.py  test_presets.py  test_readme_badges.py  test_settings_dialog.py  test_stt.py  test_stt_manager.py  test_toast.py  test_tray_app.py  test_tts.py  test_tts_manager.py  test_unlockable_presets.py  test_voice_commands.py  test_voice_integration.py  test_wake_word.py
