[project]
name = "messageflight"
version = "0.1.0"
description = "Let Windows notifications fly across your screen like a little plane."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "MessageFlight Contributors" }
]
dependencies = [
    "PyQt6>=6.5.0",
    "winsdk>=1.0.0b10",
    "pywin32>=227; sys_platform == 'win32'",
    "pygame>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/wx528/MessageFlight"
Issues = "https://github.com/wx528/MessageFlight/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["message_flight"]
