[project]
name = "messageflight"
version = "0.2.3"
description = "Let Windows notifications fly across your screen like a little plane."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "MessageFlight Contributors" }
]
dependencies = [
    "PyQt6>=6.5.0",
    "winsdk>=1.0.0b10",
    "pywin32>=227; sys_platform == 'win32'",
    "pygame>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/wx528/MessageFlight"
Issues = "https://github.com/wx528/MessageFlight/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["message_flight"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP006", "UP045", "N802", "SIM117"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
