[project]
name = "messageflight"
version = "0.3.0"
description = "Let Windows notifications fly across your screen like a little plane."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "MessageFlight Contributors" }
]
dependencies = [
    "PyQt6>=6.5.0",
    "winsdk>=1.0.0b10",
    "pywin32>=227; sys_platform == 'win32'",
    "pygame>=2.5.0",
    "openwakeword>=0.6.0",
    "sherpa-onnx>=1.9.0",
    "sounddevice>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/wx528/MessageFlight"
Issues = "https://github.com/wx528/MessageFlight/issues"

[project.scripts]
messageflight = "message_flight.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0,<9", "pytest-qt>=4.0", "mypy>=1.8", "types-pywin32>=311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["message_flight"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP006", "UP045", "N802", "SIM117"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
